@@ -49,6 +49,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29960: Preserve generator state when _random.Random.setstate()
+  raises an exception.  Patch by Bryan Olson.
+
 - bpo-30310: tkFont now supports unicode options (e.g. font family).
 
 - bpo-30414: multiprocessing.Queue._feed background running
